<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TcoTixonVibro_Config_v_1_x_x" Id="{f7712a39-f283-0b3f-25ec-9def733dd6e4}">
    <Declaration><![CDATA[TYPE
    TcoTixonVibro_Config_v_1_x_x EXTENDS TcoTixonGenericConfig :
    STRUCT
      
	
		{attribute addProperty Name "<#Error time separator #> - T_SEP_ERROR"}
		ErrorTimeSeparator : TIME := T#0S;
		{attribute addProperty Name "<#Error time buffer #> - T_BUFF_ERROR"}
		ErrorTimeBuffer : TIME := T#0S;
		{attribute addProperty Name "<#Error time Hopper #> - T_HOP_ERROR"}
		ErrorTimeHopper : TIME := T#0S;
		
    END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>